docs(spec): Phase 0+4(Airflow+Discord) 결정 보강 §12 추가
브레인스토밍으로 좁힌 실행·시연 결정을 기존 메달리온 스펙에 증분으로 기록한다.

- Phase 3(Streamlit) 보류 근거 명시(세 목적은 Airflow UI+Discord가 충족).
- 확정 결정 표(P4-1–P4-7): 시연 매체·BashOperator·standalone 런타임·장애 2모드·결함주입 격리·백필 경계·데모 구간.
- DAG activity_daily 구성(task1–5)과 구현 주의(activity 파티션 가시성·Derby 메타스토어 공유·env).
- 장애 2모드(자동 retry 복구·검증 게이트 실패 후 멱등 복구) 및 콜백 의미.
- 컴포넌트·테스트·언어 경계·범위 밖.